# stars2

./: pyproject.toml
stars2/: set_coll.py
tests/: test_set_coll.py
